# Metatrader5-CLI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MT5.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
adaptive-forex-mt5/: .gitignore  README.md  adopt.py  agent.py  alerts.py  autopilot.py  bench_llm.py  config.example.json  consensus.py  dashboard.py  dispatch.py  fingerprint.py  journal.py  managed_positions.example.json  news.py  state_db.py  test_e2e.py  trade_manager.py
adaptive-forex-mt5/tests/: conftest.py  test_adopt.py  test_adoption_bootstrap.py  test_agent_dispatch.py  test_audit_fixes.py  test_autopilot_gates.py  test_autopilot_pipeline.py  test_be_move.py  test_bootstrap.py  test_bus_listener.py  test_chandelier.py  test_consensus.py  test_consensus_join.py  test_dispatch.py  test_dual_dispatch.py  test_fingerprint.py  test_journal_kinds.py  test_journal_kinds_phase2.py  test_kill_switch.py  test_loop_once.py  test_modify_state_machine.py  test_news_blackout.py  test_phase2_audit_fixes.py  test_phase3_audit_fixes.py  test_smoke.py  test_stage_inference.py  test_state_db.py  test_trade_manager_skeleton.py  test_verdict_poller.py
archive/legacy-mt5/: __main__.py  mt5_cli.py
cli_anything/mt5/: mt5_cli.py
docs/code-reviews/: Codex1-11cb714-final-audit-2026-05-08.md  Codex1-a34a1a1-phase3-fixes-portability-review-2026-05-08.md  Codex1-ehukai-tda-ea-milestone1-2026-05-09.md  codex-adaptive-forex-mt5-7405ca1-audit-2026-05-08.md  codex-adaptive-forex-mt5-f583d88-audit-2026-05-08.md  codex-adaptive-forex-mt5-ff73a59-final-audit-2026-05-08.md  codex-depth-of-market-tda-2026-05-05.md  codex-ehukai-tda-sniper-2026-05-06.md  codex-hybrid-wpvs-live-demo-safety-review-2026-05-10.md  codex-mt5-universal-cli-rereview-2026-05-16.md  codex-mt5-universal-cli-rereview2-2026-05-16.md  codex-mt5-universal-cli-review-2026-05-16.md  codex-mt5-universal-context-rereview-2026-05-15.md  codex-mt5-universal-final-rereview-2026-05-15.md  codex-mt5-universal-phase-2-complete-review-2026-05-16.md  codex-mt5-universal-phase-2.3-review-2026-05-16.md  codex-mt5-universal-phase-3-polish-rereview-2026-05-16.md  codex-mt5-universal-phase-3-polish-review-2026-05-16.md  codex-mt5-universal-phase-3b-rereview-2026-05-16.md  codex-mt5-universal-phase-3b-review-2026-05-16.md  codex-mt5-universal-phase-4-rereview-2026-05-16.md  codex-mt5-universal-phase-4-review-2026-05-16.md  codex-mt5-universal-plan-audit-2026-05-15.md  codex-mt5-universal-plan-followup-2026-05-15.md  codex-mt5-universal-playground-review-2026-05-15.md  codex-mt5-universal-post-fix-closure-review-2026-05-16.md  codex-mt5-universal-post-fix-review-2026-05-16.md  codex-mt5-universal-pr1-alert-list-2026-06-01.md  codex-pr2-open-source-readiness-2026-06-01.md  codex-pr3-agent-wake-alert-decision-2026-06-04.md  codex-visual-tda-cleanup-usdjpy-2026-05-07.md  codex-wf-fractalpredictor-safety-review-2026-05-11.md  scotty-mt5-universal-phase-4-launcher-fix-2026-05-17.md
docs/handoffs/: 2026-05-09-Claude1-bimodal-feature-analysis.md  2026-05-09-Claude1-playground-design-spec.md  2026-05-09-Claude1-review-USDJPY-M5-iteration0-baseline.md  2026-05-09-Claude1-track-a-b-implementation-spec.md  2026-05-17-phase-4-live-closeout.md
docs/plans/: 2026-05-05-depth-of-market-cli.md  2026-05-06-ehukai-tda-sniper-integration.md  2026-05-07-mt5-tda-execution-architecture-plan.md  2026-05-07-pine-elite-market-structure-prototype.md  2026-05-09-ehukai-tda-ea-backtesting-plan.md  2026-05-15-mt5-universal-agent-native.md  agent-wake-alert-trading-plan.md  chart-zoom-screenshot-optimization-plan.md  tester-stress-delays-plan.md
docs/playgrounds/: mt5-codebase.html  mt5-tda-execution-playground.html  mt5-universal-refactor-playground.html
docs/specs/: 2026-04-24-autonomous-trading-system-design.md  2026-05-07-mt5-tda-execution-architecture.md  2026-05-15-mt5-universal-agent-native-design.md  2026-05-15-mt5-universal-review-context.md  agent-wake-alert-trading.md  chart-zoom-screenshot-optimization.md  mt5-cli-spec.md  tester-stress-delays.md
examples/: README.md  agent_loop.py
metatrader5_cli/mt5/: mt5_cli.py
mt5/: __init__.py  __main__.py  cli.py  emit.py
mt5_cli/: __init__.py  errors.py
mt5_cli/account/: __init__.py  account.py
mt5_cli/alert/: __init__.py  alert.py
mt5_cli/chart/: __init__.py  _menu.py  _navigator_walk.py  attach_ea.py  chart.py  (+3 more)
mt5_mcp/: __init__.py  server.py
shared/: codex-cli-review-prompt-2026-05-16.md
tests/: test_account.py  test_agent_smoke.py  test_alert.py  test_bridge.py  test_bridge_singleton.py  test_chart.py  test_chart_attach_ea.py  test_chart_indicators.py  test_chart_indicators_attach.py  test_chart_menu.py  test_chart_navigator.py  test_chart_navigator_walk.py  test_chart_new_chart.py  test_cli.py  test_cli_ea.py  test_cli_tester.py  test_config.py  test_config_trading_com.py  test_envelope_contract.py  test_errors.py  test_history.py  test_integration_smoke.py  test_market.py  test_mcp.py  test_mql5_compiler.py  test_mql5_deployer.py  test_mql5_discovery.py  test_mql5_scaffold.py  test_orders.py  test_phase_transition.py  test_positions.py  test_rates.py  test_reports_envelope.py  test_risk.py  test_screenshot.py  test_tester_cache.py  test_tester_ea.py  test_tester_indicator.py  test_tester_ini_builder.py  test_tester_launcher.py  (+6 more)
(+260 files in other folders)
