[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "metatrader5-cli"
version = "0.4.0"
description = "Agent-native Python library and CLI for controlling MetaTrader 5 from scripts, terminals, and agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ehukaimedia", email = "ehukaimedia@gmail.com" }]
keywords = [
    "metatrader5",
    "mt5",
    "trading",
    "forex",
    "cli",
    "agent",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Runtime dependencies are intentionally lean: this is a tool-only CLI, so it
# carries no pandas / pandas-ta / indicator-math stack. Windows-only deps are
# platform-gated where the package ships cross-platform wheels.
dependencies = [
    "MetaTrader5>=5.0.45",
    "click>=8.0.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pygetwindow>=0.0.9",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
# MCP server for agent integration: pip install metatrader5-cli[mcp]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/ehukaimedia/Metatrader5-CLI"
Repository = "https://github.com/ehukaimedia/Metatrader5-CLI"
Issues = "https://github.com/ehukaimedia/Metatrader5-CLI/issues"

[project.scripts]
mt5 = "mt5.cli:main"
mt5-mcp = "mt5_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Pragmatic lint gate (not a mass reformat): pyflakes, pycodestyle, bugbear,
# pyupgrade. Catches real issues without churning the whole tree.
select = ["E", "F", "W", "B", "UP"]
ignore = ["E501"]  # long lines are tolerated; many are wrapped MT5 help strings

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # MetaTrader5 / win32 / mss ship no stubs
warn_unused_ignores = false
# Lenient to start: this is a quality signal, not a blocking gate yet.
check_untyped_defs = false

[tool.coverage.run]
source = ["mt5_cli", "mt5", "mt5_mcp"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["mt5*", "mt5_cli*"]
exclude = ["archive*", "tests*"]

[tool.setuptools.package-data]
# Ship the minimal MQL5 templates so `mt5 ea new` / `mt5 indicator new` work
# from an installed wheel, and the agent-facing workspace one-pager.
"mt5_cli.mql5" = ["templates/*.mq5"]
"mt5_cli.skills" = ["*.md"]
